This is my first website 1st change

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+﻿
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -64,6 +64,9 @@
         <td>Android</td>
         <td>⭐</td>
       </tr>
+      <tr>
+        <td>CSS</td>
+        <td>⭐⭐⭐⭐</td>
     </table>
     <hr>
     <a href="HOBBIES.html">MY HOBBIES</a>
