--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Ashutosh's personal site</title>
   </head>
-  <body bgcolor = "#FA8072">
+  <body bgcolor = "aqua">
     <table cellspacing="20">
       <tr>
         <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTzrSw1KKl8XjvrKRV1d8wJ2D5eH43iOZVvZxk3QgvMTTOsWkX3&s" alt="mine"></td>
