--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <table cellspacing="20">
       <tr>
         <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTzrSw1KKl8XjvrKRV1d8wJ2D5eH43iOZVvZxk3QgvMTTOsWkX3&s" alt="mine"></td>
-        <td>  <h1>*ASHUTOSH KULKARNI*</h1>
+        <td>  <h1>$ASHUTOSH KULKARNI$</h1>
           <em><strong><mark>This is ash</mark></strong></em>
           <p>I am a student</p>
           <a href="https://www.google.com/search?q=computer+engineering&oq=computer+engineering&aqs=chrome..69i57j0l7.7123j1j7&sourceid=chrome&ie=UTF-8">COMPUTER ENGINEERING</a></td>
